// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/release-notes getReleaseNotes() gets release notes with body 1`] = `
Object {
  "body": "some body [#123](https://github.com/some/other-repository/issues/123), [#124](https://github.com/some/yet-other-repository/issues/124)
",
  "id": undefined,
  "name": undefined,
  "tag": "1.0.1",
  "url": "https://github.com/some/other-repository/releases/1.0.1",
}
`;

exports[`workers/pr/release-notes getReleaseNotes() gets release notes with body 2`] = `
Object {
  "body": "some body [#123](https://github.com/some/other-repository/issues/123), [#124](https://github.com/some/yet-other-repository/issues/124)
",
  "id": undefined,
  "name": undefined,
  "tag": "v1.0.1",
  "url": "https://github.com/some/other-repository/releases/v1.0.1",
}
`;

exports[`workers/pr/release-notes getReleaseNotes() gets release notes with body 3`] = `
Object {
  "body": "some body [#123](https://github.com/some/other-repository/issues/123), [#124](https://github.com/some/yet-other-repository/issues/124)
",
  "id": undefined,
  "name": undefined,
  "tag": "other-1.0.1",
  "url": "https://github.com/some/other-repository/releases/other-1.0.1",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() contains bug fix header when parsing standard-version 7.0.1 1`] = `
Object {
  "body": "##### Features

-   Adds support for \`header\` (--header) configuration based on the spec. ([#364](https://github.com/conventional-changelog/standard-version/issues/364)) ([ba80a0c](https://github.com/conventional-changelog/standard-version/commit/ba80a0c27029f54c751fe845560504925b45eab8))
-   custom 'bumpFiles' and 'packageFiles' support ([#372](https://github.com/conventional-changelog/standard-version/issues/372)) ([564d948](https://github.com/conventional-changelog/standard-version/commit/564d9482a459d5d7a2020c2972b4d39167ded4bf))

##### Bug Fixes

-   **deps:** update dependency conventional-changelog to v3.1.15 ([#479](https://github.com/conventional-changelog/standard-version/issues/479)) ([492e721](https://github.com/conventional-changelog/standard-version/commit/492e72192ebf35d7c58c00526b1e6bd2abac7f13))
-   **deps:** update dependency conventional-changelog-conventionalcommits to v4.2.3 ([#496](https://github.com/conventional-changelog/standard-version/issues/496)) ([bc606f8](https://github.com/conventional-changelog/standard-version/commit/bc606f8e96bcef1d46b28305622fc76dfbf306cf))
-   **deps:** update dependency conventional-recommended-bump to v6.0.5 ([#480](https://github.com/conventional-changelog/standard-version/issues/480)) ([1e1e215](https://github.com/conventional-changelog/standard-version/commit/1e1e215a633963188cdb02be1316b5506e3b99b7))
-   **deps:** update dependency yargs to v15 ([#484](https://github.com/conventional-changelog/standard-version/issues/484)) ([35b90c3](https://github.com/conventional-changelog/standard-version/commit/35b90c3f24cfb8237e94482fd20997900569193e))
-   use require.resolve for the default preset ([#465](https://github.com/conventional-changelog/standard-version/issues/465)) ([d557372](https://github.com/conventional-changelog/standard-version/commit/d55737239530f5eee684e9cbf959f7238d609fd4))
-   **deps:** update dependency detect-newline to v3.1.0 ([#482](https://github.com/conventional-changelog/standard-version/issues/482)) ([04ab36a](https://github.com/conventional-changelog/standard-version/commit/04ab36a12be58915cfa9c60771890e074d1f5685))
-   **deps:** update dependency figures to v3.1.0 ([#468](https://github.com/conventional-changelog/standard-version/issues/468)) ([63300a9](https://github.com/conventional-changelog/standard-version/commit/63300a935c0079fd03e8e1acc55fd5b1dcea677f))
-   **deps:** update dependency git-semver-tags to v3.0.1 ([#485](https://github.com/conventional-changelog/standard-version/issues/485)) ([9cc188c](https://github.com/conventional-changelog/standard-version/commit/9cc188cbb84ee3ae80d5e66f5c54727877313b14))
-   **deps:** update dependency yargs to v14.2.1 ([#483](https://github.com/conventional-changelog/standard-version/issues/483)) ([dc1fa61](https://github.com/conventional-changelog/standard-version/commit/dc1fa6170ffe12d4f8b44b70d23688a64d2ad0fb))
-   **deps:** update dependency yargs to v14.2.2 ([#488](https://github.com/conventional-changelog/standard-version/issues/488)) ([ecf26b6](https://github.com/conventional-changelog/standard-version/commit/ecf26b6fc9421a78fb81793c4a932f579f7e9d4a))

##### [7.0.1](https://github.com/conventional-changelog/standard-version/compare/v7.0.0...v7.0.1) (2019-11-07)

##### Bug Fixes

-   **deps:** update dependency conventional-changelog to v3.1.12 ([#463](https://github.com/conventional-changelog/standard-version/issues/463)) ([f04161a](https://github.com/conventional-changelog/standard-version/commit/f04161ae624705e68f9018d563e9f3c09ccf6f30))
-   **deps:** update dependency conventional-changelog-config-spec to v2.1.0 ([#442](https://github.com/conventional-changelog/standard-version/issues/442)) ([a2c5747](https://github.com/conventional-changelog/standard-version/commit/a2c574735ac5a165a190661b7735ea284bdc7dda))
-   **deps:** update dependency conventional-recommended-bump to v6.0.2 ([#462](https://github.com/conventional-changelog/standard-version/issues/462)) ([84bb581](https://github.com/conventional-changelog/standard-version/commit/84bb581209b50357761cbec45bb8253f6a182801))
-   **deps:** update dependency stringify-package to v1.0.1 ([#459](https://github.com/conventional-changelog/standard-version/issues/459)) ([e06a835](https://github.com/conventional-changelog/standard-version/commit/e06a835c8296a92f4fa7c07f98057d765c1a91e5))
-   **deps:** update dependency yargs to v14 ([#440](https://github.com/conventional-changelog/standard-version/issues/440)) ([fe37e73](https://github.com/conventional-changelog/standard-version/commit/fe37e7390760d8d16d1b94ca58d8123e292c46a8))
-   **deps:** update dependency yargs to v14.2.0 ([#461](https://github.com/conventional-changelog/standard-version/issues/461)) ([fb21851](https://github.com/conventional-changelog/standard-version/commit/fb2185107a90ba4b9dc7c9c1d873ed1283706ac1))
",
  "url": "https://github.com/conventional-changelog/standard-version/blob/master/CHANGELOG.md#710httpsgithubcomconventional-changelogstandard-versioncomparev701v710-2019-12-08",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() does not contain version 7.0.1 when parsing standard-version 7.0.0 1`] = `
Object {
  "body": "##### ⚠ BREAKING CHANGES

-   we were accepting .version.json as a config file, rather than .versionrc.json

##### Bug Fixes

-   **bump:** transmit tag prefix argument to conventionalRecommendedBump ([#393](https://github.com/conventional-changelog/standard-version/issues/393)) ([8205222](https://github.com/conventional-changelog/standard-version/commit/8205222))
-   **cli:** display only one, correct default for --preset flag ([#377](https://github.com/conventional-changelog/standard-version/issues/377)) ([d17fc81](https://github.com/conventional-changelog/standard-version/commit/d17fc81))
-   **commit:** don't try to process and add changelog if skipped ([#318](https://github.com/conventional-changelog/standard-version/issues/318)) ([3e4fdec](https://github.com/conventional-changelog/standard-version/commit/3e4fdec))
-   **deps:** update dependency conventional-changelog-config-spec to v2 ([#352](https://github.com/conventional-changelog/standard-version/issues/352)) ([f586844](https://github.com/conventional-changelog/standard-version/commit/f586844))
-   **deps:** update dependency conventional-recommended-bump to v6 ([#417](https://github.com/conventional-changelog/standard-version/issues/417)) ([4c5cad1](https://github.com/conventional-changelog/standard-version/commit/4c5cad1))
-   **deps:** update dependency find-up to v4 ([#355](https://github.com/conventional-changelog/standard-version/issues/355)) ([73b35f8](https://github.com/conventional-changelog/standard-version/commit/73b35f8))
-   **deps:** update dependency find-up to v4.1.0 ([#383](https://github.com/conventional-changelog/standard-version/issues/383)) ([b621a4a](https://github.com/conventional-changelog/standard-version/commit/b621a4a))
-   **deps:** update dependency git-semver-tags to v3 ([#418](https://github.com/conventional-changelog/standard-version/issues/418)) ([1ce3f4a](https://github.com/conventional-changelog/standard-version/commit/1ce3f4a))
-   **deps:** update dependency semver to v6.3.0 ([#366](https://github.com/conventional-changelog/standard-version/issues/366)) ([cd866c7](https://github.com/conventional-changelog/standard-version/commit/cd866c7))
-   **deps:** update dependency yargs to v13.3.0 ([#401](https://github.com/conventional-changelog/standard-version/issues/401)) ([3d0e8c7](https://github.com/conventional-changelog/standard-version/commit/3d0e8c7))
-   adds support for \`releaseCommitMessageFormat\` ([#351](https://github.com/conventional-changelog/standard-version/issues/351)) ([a7133cc](https://github.com/conventional-changelog/standard-version/commit/a7133cc))
-   stop suggesting npm publish if package.json was not updated ([#319](https://github.com/conventional-changelog/standard-version/issues/319)) ([a5ac845](https://github.com/conventional-changelog/standard-version/commit/a5ac845))
-   Updates package.json to _actual_ supported (tested) NodeJS versions. ([#379](https://github.com/conventional-changelog/standard-version/issues/379)) ([15eec8a](https://github.com/conventional-changelog/standard-version/commit/15eec8a))
-   **deps:** update dependency yargs to v13.2.4 ([#356](https://github.com/conventional-changelog/standard-version/issues/356)) ([00b2ce6](https://github.com/conventional-changelog/standard-version/commit/00b2ce6))
-   update config file name in command based on README.md ([#357](https://github.com/conventional-changelog/standard-version/issues/357)) ([ce44dd2](https://github.com/conventional-changelog/standard-version/commit/ce44dd2))

##### [6.0.1](https://github.com/conventional-changelog/standard-version/compare/v6.0.0...v6.0.1) (2019-05-05)

##### Bug Fixes

-   don't pass args to git rev-parse ([1ac72f7](https://github.com/conventional-changelog/standard-version/commit/1ac72f7))
",
  "url": "https://github.com/conventional-changelog/standard-version/blob/master/CHANGELOG.md#700httpsgithubcomconventional-changelogstandard-versioncomparev601v700-2019-07-30",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() parses angular.js 1`] = `
Object {
  "body": "#### Bug Fixes

-   **input:** add \`drop\` event support for IE
    ([5dc076](https://github.com/angular/angular.js/commit/5dc07667de00c5e85fd69c5b7b7fe4fb5fd65a77))
-   **ngMessages:** prevent memory leak from messages that are never attached
    ([9d058d](https://github.com/angular/angular.js/commit/9d058de04bb78694b83179e9b97bc40214eca01a),
    [#16389](https://github.com/angular/angular.js/issues/16389),
    [#16404](https://github.com/angular/angular.js/issues/16404),
    [#16406](https://github.com/angular/angular.js/issues/16406))
-   **ngTransclude:** remove terminal: true
    ([1d826e](https://github.com/angular/angular.js/commit/1d826e2f1e941d14c3c56d7a0249f5796ba11f85),
    [#16411](https://github.com/angular/angular.js/issues/16411),
    [#16412](https://github.com/angular/angular.js/issues/16412))
-   **$sanitize:** sanitize \`xml:base\` attributes
    ([b9ef65](https://github.com/angular/angular.js/commit/b9ef6585e10477fbbf912a971fe0b390bca692a6))

#### New Features

-   **currencyFilter:** trim whitespace around an empty currency symbol
    ([367390](https://github.com/angular/angular.js/commit/3673909896efb6ff47546caf7fc61549f193e043),
    [#15018](https://github.com/angular/angular.js/issues/15018),
    [#15085](https://github.com/angular/angular.js/issues/15085),
    [#15105](https://github.com/angular/angular.js/issues/15105))
",
  "url": "https://github.com/angular/angular.js/blob/master/CHANGELOG.md#169-fiery-basilisk-2018-02-02",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() parses jest 1`] = `
Object {
  "body": "##### Fixes

-   \`[jest-resolve]\` Use \`module.builtinModules\` as \`BUILTIN_MODULES\` when it
    exists
-   \`[jest-worker]\` Remove \`debug\` and \`inspect\` flags from the arguments sent to
    the child ([#5068](https://github.com/facebook/jest/pull/5068))
-   \`[jest-config]\` Use all \`--testPathPattern\` and \`<regexForTestFiles>\` args in
    \`testPathPattern\` ([#5066](https://github.com/facebook/jest/pull/5066))
-   \`[jest-cli]\` Do not support \`--watch\` inside non-version-controlled
    environments ([#5060](https://github.com/facebook/jest/pull/5060))
-   \`[jest-config]\` Escape Windows path separator in testPathPattern CLI arguments
    ([#5054](https://github.com/facebook/jest/pull/5054)
-   \`[jest-jasmine]\` Register sourcemaps as node environment to improve
    performance with jsdom ([#5045](https://github.com/facebook/jest/pull/5045))
-   \`[pretty-format]\` Do not call toJSON recursively
    ([#5044](https://github.com/facebook/jest/pull/5044))
-   \`[pretty-format]\` Fix errors when identity-obj-proxy mocks CSS Modules
    ([#4935](https://github.com/facebook/jest/pull/4935))
-   \`[babel-jest]\` Fix support for namespaced babel version 7
    ([#4918](https://github.com/facebook/jest/pull/4918))
-   \`[expect]\` fix .toThrow for promises
    ([#4884](https://github.com/facebook/jest/pull/4884))
-   \`[jest-docblock]\` pragmas should preserve urls
    ([#4837](https://github.com/facebook/jest/pull/4629))
-   \`[jest-cli]\` Check if \`npm_lifecycle_script\` calls Jest directly
    ([#4629](https://github.com/facebook/jest/pull/4629))
-   \`[jest-cli]\` Fix --showConfig to show all configs
    ([#4494](https://github.com/facebook/jest/pull/4494))
-   \`[jest-cli]\` Throw if \`maxWorkers\` doesn't have a value
    ([#4591](https://github.com/facebook/jest/pull/4591))
-   \`[jest-cli]\` Use \`fs.realpathSync.native\` if available
    ([#5031](https://github.com/facebook/jest/pull/5031))
-   \`[jest-config]\` Fix \`--passWithNoTests\`
    ([#4639](https://github.com/facebook/jest/pull/4639))
-   \`[jest-config]\` Support \`rootDir\` tag in testEnvironment
    ([#4579](https://github.com/facebook/jest/pull/4579))
-   \`[jest-editor-support]\` Fix \`--showConfig\` to support jest 20 and jest 21
    ([#4575](https://github.com/facebook/jest/pull/4575))
-   \`[jest-editor-support]\` Fix editor support test for node 4
    ([#4640](https://github.com/facebook/jest/pull/4640))
-   \`[jest-mock]\` Support mocking constructor in \`mockImplementationOnce\`
    ([#4599](https://github.com/facebook/jest/pull/4599))
-   \`[jest-runtime]\` Fix manual user mocks not working with custom resolver
    ([#4489](https://github.com/facebook/jest/pull/4489))
-   \`[jest-util]\` Fix \`runOnlyPendingTimers\` for \`setTimeout\` inside
    \`setImmediate\` ([#4608](https://github.com/facebook/jest/pull/4608))
-   \`[jest-message-util]\` Always remove node internals from stacktraces
    ([#4695](https://github.com/facebook/jest/pull/4695))
-   \`[jest-resolve]\` changes method of determining builtin modules to include
    missing builtins ([#4740](https://github.com/facebook/jest/pull/4740))
-   \`[pretty-format]\` Prevent error in pretty-format for window in jsdom test env
    ([#4750](https://github.com/facebook/jest/pull/4750))
-   \`[jest-resolve]\` Preserve module identity for symlinks
    ([#4761](https://github.com/facebook/jest/pull/4761))
-   \`[jest-config]\` Include error message for \`preset\` json
    ([#4766](https://github.com/facebook/jest/pull/4766))
-   \`[pretty-format]\` Throw \`PrettyFormatPluginError\` if a plugin halts with an
    exception ([#4787](https://github.com/facebook/jest/pull/4787))
-   \`[expect]\` Keep the stack trace unchanged when \`PrettyFormatPluginError\` is
    thrown by pretty-format ([#4787](https://github.com/facebook/jest/pull/4787))
-   \`[jest-environment-jsdom]\` Fix asynchronous test will fail due to timeout
    issue. ([#4669](https://github.com/facebook/jest/pull/4669))
-   \`[jest-cli]\` Fix \`--onlyChanged\` path case sensitivity on Windows platform
    ([#4730](https://github.com/facebook/jest/pull/4730))
-   \`[jest-runtime]\` Use realpath to match transformers
    ([#5000](https://github.com/facebook/jest/pull/5000))
-   \`[expect]\` [**BREAKING**] Replace identity equality with Object.is in toBe
    matcher ([#4917](https://github.com/facebook/jest/pull/4917))

##### Features

-   \`[jest-message-util]\` Add codeframe to test assertion failures
    ([#5087](https://github.com/facebook/jest/pull/5087))
-   \`[jest-config]\` Add Global Setup/Teardown options
    ([#4716](https://github.com/facebook/jest/pull/4716))
-   \`[jest-config]\` Add \`testEnvironmentOptions\` to apply to jsdom options or node
    context. ([#5003](https://github.com/facebook/jest/pull/5003))
-   \`[jest-jasmine2]\` Update Timeout error message to \`jest.timeout\` and display
    current timeout value ([#4990](https://github.com/facebook/jest/pull/4990))
-   \`[jest-runner]\` Enable experimental detection of leaked contexts
    ([#4895](https://github.com/facebook/jest/pull/4895))
-   \`[jest-cli]\` Add combined coverage threshold for directories.
    ([#4885](https://github.com/facebook/jest/pull/4885))
-   \`[jest-mock]\` Add \`timestamps\` to mock state.
    ([#4866](https://github.com/facebook/jest/pull/4866))
-   \`[eslint-plugin-jest]\` Add \`prefer-to-have-length\` lint rule.
    ([#4771](https://github.com/facebook/jest/pull/4771))
-   \`[jest-environment-jsdom]\` [**BREAKING**] Upgrade to JSDOM@11
    ([#4770](https://github.com/facebook/jest/pull/4770))
-   \`[jest-environment-*]\` [**BREAKING**] Add Async Test Environment APIs, dispose
    is now teardown ([#4506](https://github.com/facebook/jest/pull/4506))
-   \`[jest-cli]\` Add an option to clear the cache
    ([#4430](https://github.com/facebook/jest/pull/4430))
-   \`[babel-plugin-jest-hoist]\` Improve error message, that the second argument of
    \`jest.mock\` must be an inline function
    ([#4593](https://github.com/facebook/jest/pull/4593))
-   \`[jest-snapshot]\` [**BREAKING**] Concatenate name of test and snapshot
    ([#4460](https://github.com/facebook/jest/pull/4460))
-   \`[jest-cli]\` [**BREAKING**] Fail if no tests are found
    ([#3672](https://github.com/facebook/jest/pull/3672))
-   \`[jest-diff]\` Highlight only last of odd length leading spaces
    ([#4558](https://github.com/facebook/jest/pull/4558))
-   \`[jest-docblock]\` Add \`docblock.print()\`
    ([#4517](https://github.com/facebook/jest/pull/4517))
-   \`[jest-docblock]\` Add \`strip\`
    ([#4571](https://github.com/facebook/jest/pull/4571))
-   \`[jest-docblock]\` Preserve leading whitespace in docblock comments
    ([#4576](https://github.com/facebook/jest/pull/4576))
-   \`[jest-docblock]\` remove leading newlines from \`parswWithComments().comments\`
    ([#4610](https://github.com/facebook/jest/pull/4610))
-   \`[jest-editor-support]\` Add Snapshots metadata
    ([#4570](https://github.com/facebook/jest/pull/4570))
-   \`[jest-editor-support]\` Adds an 'any' to the typedef for
    \`updateFileWithJestStatus\`
    ([#4636](https://github.com/facebook/jest/pull/4636))
-   \`[jest-editor-support]\` Better monorepo support
    ([#4572](https://github.com/facebook/jest/pull/4572))
-   \`[jest-environment-jsdom]\` Add simple rAF polyfill in jsdom environment to
    work with React 16 ([#4568](https://github.com/facebook/jest/pull/4568))
-   \`[jest-environment-node]\` Implement node Timer api
    ([#4622](https://github.com/facebook/jest/pull/4622))
-   \`[jest-jasmine2]\` Add testPath to reporter callbacks
    ([#4594](https://github.com/facebook/jest/pull/4594))
-   \`[jest-mock]\` Added support for naming mocked functions with
    \`.mockName(value)\` and \`.mockGetName()\`
    ([#4586](https://github.com/facebook/jest/pull/4586))
-   \`[jest-runtime]\` Add \`module.loaded\`, and make \`module.require\` not enumerable
    ([#4623](https://github.com/facebook/jest/pull/4623))
-   \`[jest-runtime]\` Add \`module.parent\`
    ([#4614](https://github.com/facebook/jest/pull/4614))
-   \`[jest-runtime]\` Support sourcemaps in transformers
    ([#3458](https://github.com/facebook/jest/pull/3458))
-   \`[jest-snapshot]\` [**BREAKING**] Add a serializer for \`jest.fn\` to allow a
    snapshot of a jest mock ([#4668](https://github.com/facebook/jest/pull/4668))
-   \`[jest-worker]\` Initial version of parallel worker abstraction, say hello!
    ([#4497](https://github.com/facebook/jest/pull/4497))
-   \`[jest-jasmine2]\` Add \`testLocationInResults\` flag to add location information
    per spec to test results ([#4782](https://github.com/facebook/jest/pull/4782))
-   \`[jest-environment-jsdom]\` Update JSOM to 11.4, which includes built-in
    support for \`requestAnimationFrame\`
    ([#4919](https://github.com/facebook/jest/pull/4919))
-   \`[jest-cli]\` Hide watch usage output when running on non-interactive
    environments ([#4958](https://github.com/facebook/jest/pull/4958))
-   \`[jest-snapshot]\` Promises support for \`toThrowErrorMatchingSnapshot\`
    ([#4946](https://github.com/facebook/jest/pull/4946))
-   \`[jest-cli]\` Explain which snapshots are obsolete
    ([#5005](https://github.com/facebook/jest/pull/5005))

##### Chore & Maintenance

-   \`[docs]\` Add guide of using with puppeteer
    ([#5093](https://github.com/facebook/jest/pull/5093))
-   \`[jest-util]\` \`jest-util\` should not depend on \`jest-mock\`
    ([#4992](https://github.com/facebook/jest/pull/4992))
-   \`[*]\` [**BREAKING**] Drop support for Node.js version 4
    ([#4769](https://github.com/facebook/jest/pull/4769))
-   \`[docs]\` Wrap code comments at 80 characters
    ([#4781](https://github.com/facebook/jest/pull/4781))
-   \`[eslint-plugin-jest]\` Removed from the Jest core repo, and moved to
    <https://github.com/jest-community/eslint-plugin-jest>
    ([#4867](https://github.com/facebook/jest/pull/4867))
-   \`[babel-jest]\` Explicitly bump istanbul to newer versions
    ([#4616](https://github.com/facebook/jest/pull/4616))
-   \`[expect]\` Upgrade mocha and rollup for browser testing
    ([#4642](https://github.com/facebook/jest/pull/4642))
-   \`[docs]\` Add info about \`coveragePathIgnorePatterns\`
    ([#4602](https://github.com/facebook/jest/pull/4602))
-   \`[docs]\` Add Vuejs series of testing with Jest
    ([#4648](https://github.com/facebook/jest/pull/4648))
-   \`[docs]\` Mention about optional \`done\` argument in test function
    ([#4556](https://github.com/facebook/jest/pull/4556))
-   \`[jest-cli]\` Bump node-notifier version
    ([#4609](https://github.com/facebook/jest/pull/4609))
-   \`[jest-diff]\` Simplify highlight for leading and trailing spaces
    ([#4553](https://github.com/facebook/jest/pull/4553))
-   \`[jest-get-type]\` Add support for date
    ([#4621](https://github.com/facebook/jest/pull/4621))
-   \`[jest-matcher-utils]\` Call \`chalk.inverse\` for trailing spaces
    ([#4578](https://github.com/facebook/jest/pull/4578))
-   \`[jest-runtime]\` Add \`.advanceTimersByTime\`; keep \`.runTimersToTime()\` as an
    alias.
-   \`[docs]\` Include missing dependency in TestEnvironment sample code
-   \`[docs]\` Add clarification for hook execution order
-   \`[docs]\` Update \`expect.anything()\` sample code
    ([#5007](https://github.com/facebook/jest/pull/5007))
",
  "url": "https://github.com/facebook/jest/blob/master/CHANGELOG.md#jest-2200",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() parses js-yaml 1`] = `
Object {
  "body": "-   Fix \`condenseFlow\` output (quote keys for sure, instead of spaces), [#371](https://github.com/nodeca/js-yaml/issues/371), [#370](https://github.com/nodeca/js-yaml/issues/370).
-   Dump astrals as codepoints instead of surrogate pair, [#368](https://github.com/nodeca/js-yaml/issues/368).
",
  "url": "https://github.com/nodeca/js-yaml/blob/master/CHANGELOG.md#3100--2017-09-10",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() parses standard-version version 7.0.0 1`] = `
Object {
  "body": "##### ⚠ BREAKING CHANGES

-   we were accepting .version.json as a config file, rather than .versionrc.json

##### Bug Fixes

-   **bump:** transmit tag prefix argument to conventionalRecommendedBump ([#393](https://github.com/conventional-changelog/standard-version/issues/393)) ([8205222](https://github.com/conventional-changelog/standard-version/commit/8205222))
-   **cli:** display only one, correct default for --preset flag ([#377](https://github.com/conventional-changelog/standard-version/issues/377)) ([d17fc81](https://github.com/conventional-changelog/standard-version/commit/d17fc81))
-   **commit:** don't try to process and add changelog if skipped ([#318](https://github.com/conventional-changelog/standard-version/issues/318)) ([3e4fdec](https://github.com/conventional-changelog/standard-version/commit/3e4fdec))
-   **deps:** update dependency conventional-changelog-config-spec to v2 ([#352](https://github.com/conventional-changelog/standard-version/issues/352)) ([f586844](https://github.com/conventional-changelog/standard-version/commit/f586844))
-   **deps:** update dependency conventional-recommended-bump to v6 ([#417](https://github.com/conventional-changelog/standard-version/issues/417)) ([4c5cad1](https://github.com/conventional-changelog/standard-version/commit/4c5cad1))
-   **deps:** update dependency find-up to v4 ([#355](https://github.com/conventional-changelog/standard-version/issues/355)) ([73b35f8](https://github.com/conventional-changelog/standard-version/commit/73b35f8))
-   **deps:** update dependency find-up to v4.1.0 ([#383](https://github.com/conventional-changelog/standard-version/issues/383)) ([b621a4a](https://github.com/conventional-changelog/standard-version/commit/b621a4a))
-   **deps:** update dependency git-semver-tags to v3 ([#418](https://github.com/conventional-changelog/standard-version/issues/418)) ([1ce3f4a](https://github.com/conventional-changelog/standard-version/commit/1ce3f4a))
-   **deps:** update dependency semver to v6.3.0 ([#366](https://github.com/conventional-changelog/standard-version/issues/366)) ([cd866c7](https://github.com/conventional-changelog/standard-version/commit/cd866c7))
-   **deps:** update dependency yargs to v13.3.0 ([#401](https://github.com/conventional-changelog/standard-version/issues/401)) ([3d0e8c7](https://github.com/conventional-changelog/standard-version/commit/3d0e8c7))
-   adds support for \`releaseCommitMessageFormat\` ([#351](https://github.com/conventional-changelog/standard-version/issues/351)) ([a7133cc](https://github.com/conventional-changelog/standard-version/commit/a7133cc))
-   stop suggesting npm publish if package.json was not updated ([#319](https://github.com/conventional-changelog/standard-version/issues/319)) ([a5ac845](https://github.com/conventional-changelog/standard-version/commit/a5ac845))
-   Updates package.json to _actual_ supported (tested) NodeJS versions. ([#379](https://github.com/conventional-changelog/standard-version/issues/379)) ([15eec8a](https://github.com/conventional-changelog/standard-version/commit/15eec8a))
-   **deps:** update dependency yargs to v13.2.4 ([#356](https://github.com/conventional-changelog/standard-version/issues/356)) ([00b2ce6](https://github.com/conventional-changelog/standard-version/commit/00b2ce6))
-   update config file name in command based on README.md ([#357](https://github.com/conventional-changelog/standard-version/issues/357)) ([ce44dd2](https://github.com/conventional-changelog/standard-version/commit/ce44dd2))

##### [6.0.1](https://github.com/conventional-changelog/standard-version/compare/v6.0.0...v6.0.1) (2019-05-05)

##### Bug Fixes

-   don't pass args to git rev-parse ([1ac72f7](https://github.com/conventional-changelog/standard-version/commit/1ac72f7))
",
  "url": "https://github.com/conventional-changelog/standard-version/blob/master/CHANGELOG.md#700httpsgithubcomconventional-changelogstandard-versioncomparev601v700-2019-07-30",
}
`;

exports[`workers/pr/release-notes getReleaseNotesMd() parses standard-version version 7.0.1 1`] = `
Object {
  "body": "##### Features

-   Adds support for \`header\` (--header) configuration based on the spec. ([#364](https://github.com/conventional-changelog/standard-version/issues/364)) ([ba80a0c](https://github.com/conventional-changelog/standard-version/commit/ba80a0c27029f54c751fe845560504925b45eab8))
-   custom 'bumpFiles' and 'packageFiles' support ([#372](https://github.com/conventional-changelog/standard-version/issues/372)) ([564d948](https://github.com/conventional-changelog/standard-version/commit/564d9482a459d5d7a2020c2972b4d39167ded4bf))

##### Bug Fixes

-   **deps:** update dependency conventional-changelog to v3.1.15 ([#479](https://github.com/conventional-changelog/standard-version/issues/479)) ([492e721](https://github.com/conventional-changelog/standard-version/commit/492e72192ebf35d7c58c00526b1e6bd2abac7f13))
-   **deps:** update dependency conventional-changelog-conventionalcommits to v4.2.3 ([#496](https://github.com/conventional-changelog/standard-version/issues/496)) ([bc606f8](https://github.com/conventional-changelog/standard-version/commit/bc606f8e96bcef1d46b28305622fc76dfbf306cf))
-   **deps:** update dependency conventional-recommended-bump to v6.0.5 ([#480](https://github.com/conventional-changelog/standard-version/issues/480)) ([1e1e215](https://github.com/conventional-changelog/standard-version/commit/1e1e215a633963188cdb02be1316b5506e3b99b7))
-   **deps:** update dependency yargs to v15 ([#484](https://github.com/conventional-changelog/standard-version/issues/484)) ([35b90c3](https://github.com/conventional-changelog/standard-version/commit/35b90c3f24cfb8237e94482fd20997900569193e))
-   use require.resolve for the default preset ([#465](https://github.com/conventional-changelog/standard-version/issues/465)) ([d557372](https://github.com/conventional-changelog/standard-version/commit/d55737239530f5eee684e9cbf959f7238d609fd4))
-   **deps:** update dependency detect-newline to v3.1.0 ([#482](https://github.com/conventional-changelog/standard-version/issues/482)) ([04ab36a](https://github.com/conventional-changelog/standard-version/commit/04ab36a12be58915cfa9c60771890e074d1f5685))
-   **deps:** update dependency figures to v3.1.0 ([#468](https://github.com/conventional-changelog/standard-version/issues/468)) ([63300a9](https://github.com/conventional-changelog/standard-version/commit/63300a935c0079fd03e8e1acc55fd5b1dcea677f))
-   **deps:** update dependency git-semver-tags to v3.0.1 ([#485](https://github.com/conventional-changelog/standard-version/issues/485)) ([9cc188c](https://github.com/conventional-changelog/standard-version/commit/9cc188cbb84ee3ae80d5e66f5c54727877313b14))
-   **deps:** update dependency yargs to v14.2.1 ([#483](https://github.com/conventional-changelog/standard-version/issues/483)) ([dc1fa61](https://github.com/conventional-changelog/standard-version/commit/dc1fa6170ffe12d4f8b44b70d23688a64d2ad0fb))
-   **deps:** update dependency yargs to v14.2.2 ([#488](https://github.com/conventional-changelog/standard-version/issues/488)) ([ecf26b6](https://github.com/conventional-changelog/standard-version/commit/ecf26b6fc9421a78fb81793c4a932f579f7e9d4a))

##### [7.0.1](https://github.com/conventional-changelog/standard-version/compare/v7.0.0...v7.0.1) (2019-11-07)

##### Bug Fixes

-   **deps:** update dependency conventional-changelog to v3.1.12 ([#463](https://github.com/conventional-changelog/standard-version/issues/463)) ([f04161a](https://github.com/conventional-changelog/standard-version/commit/f04161ae624705e68f9018d563e9f3c09ccf6f30))
-   **deps:** update dependency conventional-changelog-config-spec to v2.1.0 ([#442](https://github.com/conventional-changelog/standard-version/issues/442)) ([a2c5747](https://github.com/conventional-changelog/standard-version/commit/a2c574735ac5a165a190661b7735ea284bdc7dda))
-   **deps:** update dependency conventional-recommended-bump to v6.0.2 ([#462](https://github.com/conventional-changelog/standard-version/issues/462)) ([84bb581](https://github.com/conventional-changelog/standard-version/commit/84bb581209b50357761cbec45bb8253f6a182801))
-   **deps:** update dependency stringify-package to v1.0.1 ([#459](https://github.com/conventional-changelog/standard-version/issues/459)) ([e06a835](https://github.com/conventional-changelog/standard-version/commit/e06a835c8296a92f4fa7c07f98057d765c1a91e5))
-   **deps:** update dependency yargs to v14 ([#440](https://github.com/conventional-changelog/standard-version/issues/440)) ([fe37e73](https://github.com/conventional-changelog/standard-version/commit/fe37e7390760d8d16d1b94ca58d8123e292c46a8))
-   **deps:** update dependency yargs to v14.2.0 ([#461](https://github.com/conventional-changelog/standard-version/issues/461)) ([fb21851](https://github.com/conventional-changelog/standard-version/commit/fb2185107a90ba4b9dc7c9c1d873ed1283706ac1))
",
  "url": "https://github.com/conventional-changelog/standard-version/blob/master/CHANGELOG.md#710httpsgithubcomconventional-changelogstandard-versioncomparev701v710-2019-12-08",
}
`;
